Kubenetes/00-namespace.yaml
---
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: production
  labels:
    app.kubernetes.io/managed-by: kubectl
    environment: production
